--- a/NodeChrome/config.json
+++ b/NodeChrome/config.json
@@ -2,8 +2,7 @@
   "capabilities": [
     {
       "browserName": "chrome",
-      "maxInstances": 10,
-      "seleniumProtocol": "WebDriver"
+      "maxInstances": 10
     }
   ],
   "configuration": {
