--- a/NodeFirefox/config.json
+++ b/NodeFirefox/config.json
@@ -1,9 +1,14 @@
 {
   "capabilities": [
-
+    {
+      "browserName": "*firefox",
+      "maxInstances": 10,
+      "seleniumProtocol": "Selenium"
+    },
     {
       "browserName": "firefox",
-      "maxInstances": 10
+      "maxInstances": 10,
+      "seleniumProtocol": "WebDriver"
     }
   ],
   "configuration": {
