--- a/NodeChrome/config.json
+++ b/NodeChrome/config.json
@@ -1,8 +1,14 @@
 {
   "capabilities": [
     {
+      "browserName": "*googlechrome",
+      "maxInstances": 10,
+      "seleniumProtocol": "Selenium"
+    },
+    {
       "browserName": "chrome",
-      "maxInstances": 10
+      "maxInstances": 10,
+      "seleniumProtocol": "WebDriver"
     }
   ],
   "configuration": {
