updated to use 2.45.0
changed config.json to allow also older version of seleniumprotocol.

--- a/NodeChrome/config.json
+++ b/NodeChrome/config.json
@@ -1,6 +1,10 @@
 {
   "capabilities": [
-
+    {
+      "browserName": "*googlechrome",
+      "maxInstances": 10,
+      "seleniumProtocol": "Selenium"
+    },
     {
       "browserName": "chrome",
       "maxInstances": 10,
