--- a/NodeFirefox/config.json
+++ b/NodeFirefox/config.json
@@ -1,6 +1,10 @@
 {
   "capabilities": [
-
+    {
+      "browserName": "*firefox",
+      "maxInstances": 10,
+      "seleniumProtocol": "Selenium"
+    },
     {
       "browserName": "firefox",
       "maxInstances": 10,
