--- a/NodeChrome/config.json
+++ b/NodeChrome/config.json
@@ -2,18 +2,20 @@
   "capabilities": [
     {
       "browserName": "*googlechrome",
-      "maxInstances": 3,
+      "maxInstances": 5,
       "seleniumProtocol": "Selenium"
     },
     {
       "browserName": "chrome",
-      "maxInstances": 3,
+      "maxInstances": 5,
       "seleniumProtocol": "WebDriver"
     }
   ],
   "configuration": {
     "proxy": "org.openqa.grid.selenium.proxy.DefaultRemoteProxy",
-    "maxSession": 3,
+    "maxSession": 5,
+    "nodeTimeout" : 120,
+    "timeout" : 120,
     "port": 5555,
     "register": true,
     "registerCycle": 5000
